# m3controllers

./: .gitignore  CMakeLists.txt  README.md  setup.bash
data/: 01_txyz.txt  gmm_1.txt  gmm_10kernels.txt  gmm_2.txt  gmm_4kernels.txt  task_1.txt  task_2.txt
include/m3controllers/cart_controller/: cart_controller.h
include/m3controllers/dmp_controller/: dmp_controller.h
include/m3controllers/joints_controller/: joints_controller.h
include/m3controllers/m3_controller_interface/: m3_controller_interface.h
include/m3controllers/sin_controller/: sin_controller.h
include/m3controllers/tools/: tools.h
include/m3controllers/vf_controller/: vf_controller.h
include/m3controllers/vf_force_controller/: vf_force_controller.h
proto/m3controllers/cart_controller/: cart_controller.proto
proto/m3controllers/dmp_controller/: dmp_controller.proto
proto/m3controllers/m3_controller_interface/: m3_controller_interface.proto
proto/m3controllers/torque_controller/: torque_controller.proto
proto/m3controllers/vf_controller/: vf_controller.proto
proto/m3controllers/vf_force_controller/: vf_force_controller.proto
python/m3controllers/m3_controller_interface/: m3_controller_interface.py
python/m3controllers/vf_force_controller/: launch_script.sh  vf_force_controller.py
robot_config/: m3_config.yml  m3_config.yml.in
robot_config/m3controllers/: cart_controller_test.yml  dmp_controller_test.yml  joints_controller_test.yml  m3dynamatics_right_arm_test.yml  sin_controller_test.yml  torque_controller_test.yml  vf_controller_test.yml  vf_force_controller_test.yml
src/m3controllers/: CMakeLists.txt  factory_proxy.cpp
src/m3controllers/cart_controller/: CMakeLists.txt  cart_controller.cpp  cart_controller_listener.cpp  cmd.txt
src/m3controllers/dmp_controller/: CMakeLists.txt  dmp.xml  dmp_0.xml  dmp_controller.cpp
src/m3controllers/joints_controller/: CMakeLists.txt  joints_controller.cpp
src/m3controllers/m3_controller_interface/: CMakeLists.txt
src/m3controllers/m3_controller_manager/: CMakeLists.txt  m3_controller_manager.cpp
src/m3controllers/sin_controller/: CMakeLists.txt  sin_controller.cpp
src/m3controllers/torque_controller/: CMakeLists.txt  force.txt  torque.txt  torque_controller.cpp  torque_controller.h
src/m3controllers/vel_controller/: CMakeLists.txt  torque_controller.cpp  torque_controller.h
src/m3controllers/vf_controller/: CMakeLists.txt  vf_controller.cpp
src/m3controllers/vf_force_controller/: CMakeLists.txt  vf_force_controller.cpp
